<resources>
    <string name="app_name">Real Estate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_into_continue">Sign in to continue</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="network_msg">No network connection</string>
    <string name="default_latitude">22.303894</string>
    <string name="default_longitude">70.802160</string>
    <string name="menu_home">Home</string>
    <string name="menu_property">All Properties</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_feature">Featured</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_about">About Us</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_more_app">More App</string>
    <string name="menu_search">Search</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_add_properties">Add Properties</string>
    <string name="menu_my_properties">My Properties</string>
    <string name="notification_title">Enable Push Notification</string>
    <string name="no_item_found">No Item Found</string>
    <string name="you_may">You may also like</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="name_login">Name</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="phone_login">Phone</string>
    <string name="address_title">Address</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="loading_title">Loading...</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">Don\'t Have an Account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_account">Already Have an Account? </string>
    <string name="enter_city">Enter City</string>
    <string name="enter_address">Enter Address</string>
    <string name="submit">Submit</string>
    <string name="remember_me">Remember Me</string>
    <string name="send">Send</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="forgot_description">Enter your email address below and  we\'ll send you email with password</string>
    <string name="button_text_forgot_password">Forgot your password?</string>
    <string name="profile_name_lbl">Name :- </string>
    <string name="profile_email_lbl">Email :- </string>
    <string name="profile_phone_lbl">Phone :- </string>
    <string name="address_lbl">Address :- </string>
    <string name="profile_password_lbl">Password :- </string>
    <string name="detail_fur">Furnished</string>
    <string name="detail_semi">Semi-Furnished</string>
    <string name="detail_un_semi">Unfurnished</string>
    <string name="detail_very">Verified</string>
    <string name="detail_un_very">Non Verified</string>
    <string name="advance_filter_title">Advance Property Filter</string>
    <string name="filter_recommended">Recommended Filter</string>
    <string name="filter_recommended_very">Verified Properties</string>
    <string name="filter_recommended_non_very">Non Verified Properties</string>
    <string name="filter_price">Price</string>
    <string name="filter_price_min">Min:- </string>
    <string name="filter_price_max">Max:- </string>
    <string name="filter_furnishing">Furnishing Status</string>
    <string name="filter_furnishing_fur">Furnished</string>
    <string name="filter_furnishing_semi">Semi-Furnished</string>
    <string name="filter_furnishing_un_fur">Unfurnished</string>
    <string name="filter_type_properties">Property Type</string>
    <string name="filter_bed">BedRoom</string>
    <string name="filter_apply">Apply</string>
    <string name="filter2_type">Type</string>
    <string name="filter2_work">Work</string>
    <string name="filter2_cowork">Coworking</string>
    <string name="filter_cafe">Work Cafe</string>
    <string name="filter2_monitor">Dual/Single Monitor</string>
    <string name="filter2_soundrec">Sound Recording Equip</string>
    <string name="filter2_videorec">Video Recording Equip</string>
    <string name="filter2_printer">Printer</string>
    <string name="filter2_scanner">Scanner</string>
    <string name="filter2_photocopier">Photocopier</string>
    <string name="filter2_3dprinter">3D Printer</string>
    <string name="filter2_pcs">Computer(PCs)</string>
    <string name="filter2_mac">Computer(MAC)</string>
    <string name="filter2_projector">Projector</string>
    <string name="filter2_apple_tv">Apple TV</string>
    <string name="filter2_chromecast">Chromecast</string>
    <string name="filter2_microphone">Microphone</string>
    <string name="filter2_photostudio">Photo Studio</string>
    <string name="filter2_greenscreen">Green Screen</string>
    <string name="filter2_recordingstudio">Recording Studio</string>
    <string name="filter2_proflightequip">Lighting Equipment</string>
    <string name="filter2_drone">Drone</string>
    <string name="filter2_arequip">AR Equipment</string>
    <string name="filter2_vrequip">VR Equipment</string>
    <string name="filter2_screenprinter">Screen Printer</string>
    <string name="filter3_parking">Free parking on premise</string>
    <string name="filter3_bikeparking">Bike parking</string>
    <string name="filter3_carshare">Car Share</string>
    <string name="filter3_walk">5 min walk from public transit</string>
    <string name="filter3_10walk">10 min walk from public transit</string>
    <string name="filter4_wheelchair">wheelchair</string>
    <string name="filter4_member">24hr member access</string>
    <string name="filter5_wifi">High speed Wifi</string>
    <string name="filter5_heating">Heating</string>
    <string name="filter5_ac">Air conditioning</string>
    <string name="filter6_desk">Standing Desk</string>
    <string name="filter6_beanbags">Beanbags</string>
    <string name="filter6_chairs">Economic chairs</string>
    <string name="filter6_ballchair">Bous ball chairs</string>
    <string name="filter6_hammocks">Hammocks</string>
    <string name="filter7_events">Events</string>
    <string name="filter7_workshop">Workshops</string>
    <string name="filter7_lunches">Community lunches</string>
    <string name="filter7_drinks">Community drinks</string>
    <string name="filter7_facebook">Facebook group for members</string>
    <string name="filter7_slack">Slack channels for members</string>
    <string name="filter7_mentorship">Mentorship</string>
    <string name="filter7_programs">Programs</string>
    <string name="filter7_app">Community app</string>
    <string name="filter7_pitching">Pitching events</string>
    <string name="filter7_incubator">Incubator Programs</string>
    <string name="filter7_accelerator">Accelerator programs</string>
    <string name="filter7_sprots">Organized sports team</string>
    <string name="filter7_toastmaster">Toastmasters</string>
    <string name="filter8_day">Day</string>
    <string name="filter8_night">night</string>
    <string name="filter8_24">24*7</string>
    <string name="filter9_5">5 days</string>
    <string name="filter9_6">6 days</string>
    <string name="filter10_outdoor">Outdoor</string>
    <string name="filter10_pool">Swimming pool</string>
    <string name="filter10_lounge">Lounge</string>
    <string name="filter10_nap">Nap room</string>
    <string name="filter10_yoga">Yoga room</string>
    <string name="filter10_meditation">Meditation room</string>
    <string name="filter11_pool">Pool table</string>
    <string name="filter11_foosball">Foosball</string>
    <string name="filter11_trampoline">Trampoline</string>
    <string name="filter11_mini">Mini golf</string>
    <string name="filter11_library">Library</string>
    <string name="filter11_gym">Gym</string>
    <string name="filter11_wine">Free wine</string>
    <string name="filter11_games">Board games</string>
    <string name="filter11_karaoke">Karaoke</string>
    <string name="filter11_dog">Dog friendly</string>
    <string name="filter11_art">Art gallery</string>
    <string name="filter11_laundry">Laundry</string>
    <string name="filter11_court">Volleball court</string>
    <string name="filter12_water">Free drinking water</string>
    <string name="filter12_alcohol">Alcohol available for purchase</string>
    <string name="filter12_snacks">Free snacks</string>
    <string name="filter12_kitchen">Catering kitchen</string>
    <string name="filter12_onsite">Onsite Restaurant</string>
    <string name="filter12_puchacesnack">Snacks available for purchase</string>
    <string name="filter13_tea">Free tea</string>
    <string name="filter13_coffee">Free coffee</string>
    <string name="filter13_cafe">Onsite cafe</string>
    <string name="filter13_coffeepurchase">Coffee available for purchase</string>
    <string name="filter14_individual">Individual</string>
    <string name="filter14_2team">2-3 team</string>
    <string name="filter14_3team">3-7 team</string>
    <string name="filter14_7">7 plus</string>
    <string name="filter14_conference">Conference room</string>
    <string name="filter14_meeting">Meeting room</string>
    <string name="filter14_office">Office/Cabin</string>
    <string name="filter14_seating">Seating</string>
    <string name="filter14_virtual">Virtual office</string>
    <string name="filter15_conference">Conference Room</string>
    <string name="filter15_meeting">Meeting Room</string>
    <string name="max_value">Max :-</string>
    <string name="min_value">Min :-</string>
    <string name="max_value_price">100</string>
    <string name="min_value_price">5000000</string>
    <string name="currency_symbol">$</string>
    <string name="choose_one_type">Choose type atleast one</string>
    <string name="sort_by_title">Sort By</string>
    <string name="sort_by_distance">Distance</string>
    <string name="sort_by_law">Price :- High to Low</string>
    <string name="sort_by_all">All Properties</string>
    <string name="sort_by_high">Price :- Low to High</string>
    <string name="sort_by_latest">Latest</string>
    <string name="sort_by_popular">Popular</string>
    <string name="location_permission">Location permission is required to find properties near you, without that you will not get optimal results</string>
    <string name="gdpr_privacy_link">https://termsfeed.com/blog/privacy-policy-admob/</string>
    <string name="flexidesc">Each pass to be used to avail 1 working day of flexi seat type occupancy in any coworking listed.</string>
    <string name="flexicount">Each pass has a lifetime validity, can be availed whenever you need.</string>
    <string name="mrdesc">Each pass to be used to avail listed working hours of meeting room in any coworking listed.</string>
    <string name="mrcount">Each pass has a lifetime validity, can be availed whenever you need.</string>
    <string name="crdesc">Each pass to be used to avail listed working hours of conference room in any coworking listed.</string>
    <string name="crcount">Each pass has a lifetime validity, can be availed whenever you need.</string>
</resources>