<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:src="@drawable/duolingo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Flexi Passes"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/flexidesc"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/flexicount"
                    android:textAlignment="center" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:overScrollMode="always"
                    android:paddingStart="@dimen/card_padding"
                    android:paddingLeft="@dimen/card_padding"
                    android:paddingEnd="@dimen/card_padding"
                    android:paddingRight="@dimen/card_padding"
                    android:paddingBottom="30dp">

                </android.support.v4.view.ViewPager>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Meeting Room  Passes"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/mrdesc"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/mrcount"
                    android:textAlignment="center" />

                <android.support.v4.view.ViewPager
                android:id="@+id/viewPager2"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:overScrollMode="always"
                android:paddingStart="@dimen/card_padding"
                android:paddingLeft="@dimen/card_padding"
                android:paddingEnd="@dimen/card_padding"
                android:paddingRight="@dimen/card_padding"
                android:paddingBottom="30dp" />
</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="Conference Room Passes"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/crdesc"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/crcount"
                    android:textAlignment="center" />

                <android.support.v4.view.ViewPager
                android:id="@+id/viewPager3"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:overScrollMode="always"
                android:paddingStart="@dimen/card_padding"
                android:paddingLeft="@dimen/card_padding"
                android:paddingEnd="@dimen/card_padding"
                android:paddingRight="@dimen/card_padding"
                android:paddingBottom="30dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>